# nrf52833-rgb-led-matrix-lib-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: colors.rs  counter.rs  direct_french_flag.rs  direct_stencil.rs  draw-canvas.rs  draw_canvas.rs  french-flag.rs  hello-world-blink.rs  hello_world_blink.rs  numbers.rs  raw-simple-display.rs  txt-bonne-annee.rs
icon_generator/: Cargo.toml
icon_generator/src/: main.rs
nrf52833_rgb_led_matrix/: Cargo.toml
nrf52833_rgb_led_matrix/examples/: birthday_static.rs  colors.rs  counter.rs  direct_french_flag.rs  direct_stencil.rs  draw_canvas.rs  hello_world_blink.rs  luminosity.rs  numbers.rs  raw_simple_display.rs
nrf52833_rgb_led_matrix/src/: canvas.rs  fonts.rs  helpers.rs  ledmatrix.rs  lib.rs  metrics.rs  models.rs  scheduler.rs  timer.rs  utils.rs
nrf52833_rgb_led_matrix/src/models/: birthday_cake.rs  icons.rs
src/: canvas.rs  fonts.rs  ledmatrix.rs  lib.rs  main.rs  metrics.rs  models.rs  readonly_cell.rs  scheduler.rs  timer.rs  utils.rs
