[workspace]

members = [
    "nrf52833_rgb_led_matrix",
    "icon_generator",
]

default-members = []

[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["Vincent Hiribarren"]
description = "Library to use a RGB LED matrix panel with a nRF52833 MCU"
homepage = "https://github.com/vhiribarren/nrf52833-rgb-led-matrix-lib-rust/"
repository = "https://github.com/vhiribarren/nrf52833-rgb-led-matrix-lib-rust/"
readme = "README.md"
keywords = ["nRF52833", "microbit", "led", "matrix", "panel"]