[package]
name = "nrf52833-rgb-led-matrix"
version = "0.1.0"
edition = "2021"
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc"]

[features]
logging = ["dep:rtt-target", "dep:panic-rtt-target"]

[dependencies]
cortex-m-rt = "0.7.0"
cortex-m = "0.7.6"
nrf52833-hal = "0.16.0"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"], optional = true }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"], optional = true }